<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.deevvdd.politicalpreparedness.features.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_16">


        <TextView
            android:id="@+id/tvSearchTitle"
            style="@style/App.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_representative"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfAddressLine1"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_8"
            android:hint="@string/text_address_line_1"
            app:layout_constraintTop_toBottomOf="@+id/tvSearchTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edAddressLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.addressLine1}"
                tools:text="hello" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfAddressLine2"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_8"
            android:hint="@string/text_address_line_2"
            app:layout_constraintTop_toBottomOf="@+id/tfAddressLine1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edAddressLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.addressLine2}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfCity"
            style="@style/App.Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_8"
            android:layout_marginEnd="@dimen/spacing_8"
            android:hint="@string/text_city"
            app:layout_constraintEnd_toStartOf="@+id/tfState"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfAddressLine2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.city}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfState"
            style="@style/App.InputDropDown"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/spacing_8"
            android:hint="@string/text_state"
            app:layout_constraintBottom_toBottomOf="@id/tfCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tfCity"
            app:layout_constraintTop_toBottomOf="@+id/tfAddressLine2">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfZipCode"
            style="@style/App.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_8"
            android:hint="@string/text_zip_code"
            app:layout_constraintTop_toBottomOf="@+id/tfState">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.zipCode}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearchRepresentative"
            style="@style/App.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/find_my_representative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfZipCode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUseLocation"
            style="@style/App.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/text_use_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearchRepresentative" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>