<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="com.deevvdd.politicalpreparedness.domain.model.response.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16">


        <ImageView
            android:id="@+id/ivProfile"
            android:contentDescription="@string/profile_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadImage="@{item.official.photoUrl}" />

        <TextView
            android:id="@+id/tvOfficeName"
            style="@style/App.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_8"
            android:text="@{item.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Office Name" />


        <TextView
            android:id="@+id/tvOfficialName"
            style="@style/App.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_8"
            android:text="@{item.official.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@id/tvOfficeName"
            tools:text="Office Name" />

        <TextView
            android:id="@+id/tvOfficialParty"
            style="@style/App.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_8"
            android:text="@{item.official.party}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@id/tvOfficialName"
            tools:text="Office Name" />


        <ImageView
            android:id="@+id/ivTwitter"
            android:contentDescription="@string/route_twitter_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_twitter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialParty"
            tools:visibility="visible" />


        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginTop="@dimen/spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@string/route_facebook_image"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivTwitter"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialParty"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivWebsite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/route_website_image"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginTop="@dimen/spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_www"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivFacebook"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialParty"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
